--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appnope==0.1.4
 asttokens==3.0.0
+beautifulsoup4==4.13.3
+bs4==0.0.2
 click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
@@ -37,9 +39,13 @@ python-dateutil==2.9.0.post0
 pytz==2025.1
 pyzmq==26.2.1
 regex==2024.11.6
+scikit-learn==1.6.1
+scipy==1.15.2
 seaborn==0.13.2
 six==1.17.0
+soupsieve==2.6
 stack-data==0.6.3
+threadpoolctl==3.5.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
