--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ debugpy==1.8.12
 decorator==5.2.1
 executing==2.2.0
 fonttools==4.56.0
+gensim==4.3.3
 ipykernel==6.29.5
 ipython==9.0.0
 ipython_pygments_lexers==1.1.1
@@ -22,7 +23,7 @@ matplotlib==3.10.1
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 nltk==3.9.1
-numpy==2.2.3
+numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -40,9 +41,10 @@ pytz==2025.1
 pyzmq==26.2.1
 regex==2024.11.6
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.13.1
 seaborn==0.13.2
 six==1.17.0
+smart-open==7.1.0
 soupsieve==2.6
 stack-data==0.6.3
 threadpoolctl==3.5.0
@@ -52,3 +54,4 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
 wcwidth==0.2.13
+wrapt==1.17.2
